# CG

aulas/aula10cg/: CMakeCache.txt  CMakeLists.txt  Makefile  class10  cmake_install.cmake  main.cpp
aulas/aula11cg/: CMakeCache.txt  Makefile  class11  cmake_install.cmake  main.cpp
aulas/aula1cg/: CMakeCache.txt  Makefile  class1  cmake_install.cmake  main.cpp
aulas/aula2cg/: CMakeCache.txt  Makefile  class2  cmake_install.cmake  main.cpp
aulas/aula3cg/: CMakeCache.txt  Makefile  class3  cmake_install.cmake  main.cpp
aulas/aula5cg/: CMakeCache.txt  Makefile  class5  cmake_install.cmake  main.cpp
aulas/aula6cg/: CMakeCache.txt  Makefile  class6  cmake_install.cmake  main.cpp
aulas/aula8cg/: CMakeCache.txt  Makefile  class8  cmake_install.cmake  main.cpp
aulas/aula9cg/: CMakeCache.txt  Makefile  class9  cmake_install.cmake  main.cpp
fase1/engine/: CMakeLists.txt
fase1/engine/src/: main.cpp  main.hpp
fase1/engine/src/structs/: camera.cpp  group.cpp  group.hpp  model.cpp
fase1/generator/: CMakeLists.txt  sphere_1_10_10.3d
fase1/generator/src/: main.cpp  main.hpp
fase1/generator/src/classes/: point.hpp
fase2/engine/: CMakeLists.txt
fase2/engine/Demos/: solarSystem.xml
fase2/engine/src/: main.cpp
fase2/engine/src/structs/: model.hpp  transformation.cpp  transformation.hpp
fase2/generator/: cone_1_2_4_3.3d
fase2/generator/src/classes/: index.hpp  point.cpp
fase2/generator/src/write/: write.cpp  write.hpp
fase3/engine/: CMakeLists.txt
fase3/engine/Demos/: solarSystem.xml  solarSystemfase3.xml
fase3/engine/src/: main.cpp  main.hpp
fase3/engine/src/structs/: camera.hpp  catmullrom.cpp  model.cpp  model.hpp  transformation.cpp  transformation.hpp  window.cpp
fase3/generator/: box_2_3.3d  sphere_1_8_8.3d
fase3/generator/src/: main.cpp
fase3/generator/src/classes/: index.cpp
fase3/generator/src/patches/: patches.cpp  patches.hpp  teapot.patch
fase4/engine/: CMakeLists.txt
fase4/engine/Demos/: solarSystemfase3.xml
fase4/engine/src/: main.cpp  main.hpp
fase4/generator/: CMakeLists.txt  bezier_10.3d  plane_2_3.3d
fase4/generator/src/: main.hpp
fase4/generator/src/classes/: point.hpp
fase4/generator/src/figures/box/: box.cpp
fase4/generator/src/figures/cone/: cone.cpp  cone.hpp
fase4/generator/src/figures/plane/: plane.cpp
fase4/generator/src/figures/sphere/: sphere.cpp  sphere.hpp
fase4/generator/src/patches/: patches.cpp
(+16 files in other folders)
